# grasping_benchmarking

./: .gitignore  README.md  benchmark_grasping_gnome_terminal.sh  benchmark_grasping_gnome_terminal_old.sh  benchmark_grasping_tmux.sh
benchmarking_ws/.catkin_tools/profiles/default/: config.yaml
benchmarking_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
benchmarking_ws/devel/.private/benchmarking_grasp/: .catkin  local_setup.fish
benchmarking_ws/devel/.private/benchmarking_msgs/: .catkin  setup.sh
benchmarking_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
benchmarking_ws/devel/.private/franka_control/: .catkin  .rosinstall  local_setup.fish
benchmarking_ws/devel/.private/franka_description/: .catkin
benchmarking_ws/devel/.private/franka_example_controllers/: .catkin  .rosinstall  setup.sh
benchmarking_ws/devel/.private/franka_gripper/: .catkin  .rosinstall  setup.fish
benchmarking_ws/logs/gazebo_grasp_plugin/: build.check.000.log.stderr  build.cmake.000.log.stderr
benchmarking_ws/logs/gazebo_version_helpers/: build.check.000.log.stderr
benchmarking_ws/logs/gazebo_world_plugin_loader/: build.check.000.log.stderr
benchmarking_ws/logs/pick_and_place/: build.check.000.log.stderr
benchmarking_ws/src/benchmarking_vision_based_grasping/: README.md
grasp_algo_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
grasp_algo_ws/logs/gpd_ros/: build.make.000.log.stderr
grasp_algo_ws/src/grasp_synthesis/ros_deep_grasp/: CMakeLists.txt
grasp_algo_ws/src/grasp_synthesis/ros_deep_grasp/lib/nets/: network.py  resnet_v1.py
grasp_algo_ws/src/grasp_synthesis/ros_deep_grasp/scripts/: grasp.py  service_server.py
grasp_algo_ws/src/grasp_synthesis/ros_deep_grasp/srv/: Grasp2DPrediction.srv  GraspPrediction.srv
grasp_algo_ws/src/grasp_synthesis/top_surface_algo/: CMakeLists.txt
grasp_algo_ws/src/grasp_synthesis/top_surface_algo/scripts/: grasp_synthesis.cpp  pyefd.py
panda_sim_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
panda_sim_ws/logs/franka_hw/: build.make.001.log.stderr
panda_sim_ws/logs/gazebo_grasp_plugin/: build.check.000.log.stderr  build.cmake.000.log.stderr
panda_sim_ws/logs/gazebo_grasp_plugin_ros/: build.cmake.000.log.stderr
panda_sim_ws/logs/panda_simulation/: build.check.000.log.stderr  build.cmake.000.log.stderr  build.make.000.log.stderr
(+1924 files in other folders)
